# mcp-ansible-k8s

./: .branch-notes-fix.md  .branch-notes.md  .env.example  .gitignore  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
PRPs/: mcp-ansible-k8s-server.md  streamlit-web-interface.md
PRPs/old_INITIAL/: INITIAL-1.md
data/: README.md
docker/: Dockerfile.mcp  Dockerfile.validator  Dockerfile.web
examples/: __init__.py  test_generation.py
examples/prompts/: ansible_k8s_expert.txt
src/: __init__.py  app.py  config.py  engine.py  llm_engine.py  prompts.py  server.py  utils.py  validator.py
tests/: __init__.py  test_config.py  test_engine.py  test_llm_engine.py  test_server.py  test_utils.py  test_validator.py
tests/fixtures/: invalid_syntax.yml  missing_fqcn.yml  valid_playbook.yml
